--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,9 @@
         <item>khi</item>
         <item>meoden</item>
         <item>meolucky</item>
-
-
-
+        <item>meotrang</item>
+        <item>rua</item>
+        <item>soi</item>
+        <item>voi</item>
     </string-array>
 </resources>
